<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
    android:id="@+id/textView"
    android:layout_width="384dp"
    android:layout_height="wrap_content"
    android:padding="20dp"
    android:text="@string/memos"
    android:textAlignment="center"
    android:textAllCaps="true"
    android:textColor="@android:color/background_dark"
    android:textStyle="normal|bold" />



    <RadioGroup
        android:id="@+id/radioGrupo"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_margin="100dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="20dp">

        <RadioButton
            android:id="@+id/rbFacil"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:checked="true"
            android:text="@string/facil" />

        <RadioButton
            android:id="@+id/rbMedio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/rbFacil"
            android:text="@string/medio" />

        <RadioButton
            android:id="@+id/rbGodMode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/rbMedio"
            android:text="@string/godMode" />

    </RadioGroup>

    <Button
        android:id="@+id/btnEmpezar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:height="300dp"
        android:layout_marginLeft="100dp"
        android:layout_marginBottom="100dp"
        android:layout_row="7"
        android:text="@string/comenzar" />

</LinearLayout>